	  as just a special caseof on_exit().  This assumes that the ABI can
	  handle receipt of more call parameters than the receiving function
	  expects.  That is usually the case if parameters are passed in
	  registers.
	* libxx/libxx_cxa_atexit():  Implements __cxa_atexit()
	* configs/stm32f4discovery/cxxtest:  New test that will be used to
	  verify the uClibc++ port (eventually).  The sim platform turned not
	  to be a good platform for testing uClibc++.  The sim example will not
	  run because the simulator will attempt to execute the static
	  constructors before main() starts. BUT... NuttX is not initialized
	  and this results in a crash.  On the STM324Discovery, I will have
	  better control over when the static constructors run.
	* RGMP 4.0 updated from Qiany Yu.
	* configs/*/Make.defs and configs/*/ld.script:  Massive clean-up
	  and standardization of linker scripts from Freddie Chopin.
	* net/netdev_ioctl.c:  Add interface state flags and ioctl calls
	  to bring network interfaces up and down (from Darcy Gong).
	* config/stm32f4discovery: Enable C++ exceptions.  Now the entire
	  apps/examples/cxxtest works -- meaning the the uClibc++ is
	  complete and verified for the STM32 platform.

6.24 2012-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* arch/arm/src/stm32:  Support for STM32F100 high density chips
	  added by Freddie Chopin.
	* configs/stm32f100_generic:  Support for generic STM32F100RC board
	  contributed by Freddie Chopin.
	* arch/arm/src/stm32_otgfsdev.c:  Partial fix from Petteri Aimonen.
	* drivers/lcd/ug-2864ambag01.c and include/nuttx/lcd/ug_2864ambag01.h:
	  LCD driver for the Univision OLED of the same name (untested on
	  initial check-in).
	* configs/stm32f4discovery/nxlines:  Configure to use mconf/Kconfig
	  tool.
	* configs/stm32f4discovery/src/up_ug2864ambag01.c:  Board-specific
	  initialization for UG-2864AMBAG01 OLED connecte to STM32F4Disovery.
	* libxx/libxx_stdthrow.cxx:  Exception stubs from Petteri Aimonen.